--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   </head>
   <body>
-    <div id="app-index"></div>
+    <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
